--- a/sass/style.css
+++ b/sass/style.css
@@ -168,3 +168,139 @@ body {
   font-size: 22px;
   font-weight: bold;
 }
+
+/* Portfolio */
+.portfolio {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background: #ebedf0;
+}
+
+.portfolio h2 {
+  font-family: "Hammersmith One", sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  color: #000000;
+}
+
+.portfolio .one {
+  font-style: italic;
+  color: #2f2e2e;
+}
+
+.card {
+  height: 100%;
+}
+
+.card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+/* Footer */
+.page-footer {
+  width: 100%;
+  height: 130px;
+}
+
+.page-footer .container {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.page-footer .container .copyright {
+  position: absolute;
+  top: 30%;
+  left: 12%;
+  font-family: "Hammersmith One", sans-serif;
+  color: #2f2e2e;
+}
+
+.page-footer .container ul {
+  position: absolute;
+  display: block;
+  width: 300px;
+  top: 30%;
+  left: 45%;
+  list-style-type: none;
+  margin: auto;
+  padding: auto;
+}
+
+.page-footer .container ul li {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  padding: 5px;
+  border: 1px solid #2f2e2e;
+  background: #2f2e2e;
+  border-radius: 50%;
+  text-align: center;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: 3px;
+  line-height: 30px;
+}
+
+.page-footer .container ul li i {
+  color: #ffffff;
+  font-size: 20px;
+}
+
+/* Media */
+@media (max-width: 767px) {
+  .splash-inner .splash-title {
+    font-size: 40px;
+  }
+  .main-navigation {
+    display: flex;
+    left: 60%;
+  }
+  .main-navigation ul {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    max-width: 120px;
+  }
+  .services {
+    height: auto;
+  }
+  .services .container .row {
+    padding: 5px 20px;
+  }
+  .services .col-12 {
+    padding: 20px;
+  }
+  .page-footer {
+    height: 150px;
+    width: 100%;
+  }
+  .page-footer .container {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    text-align: center;
+  }
+  .page-footer .container .copyright {
+    position: absolute;
+    top: 70%;
+  }
+  .page-footer .container ul {
+    width: auto;
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+  }
+}
