--- a/sass/style.scss
+++ b/sass/style.scss
@@ -183,3 +183,155 @@ body {
         }
     }
 }
+
+/* Portfolio */
+
+.portfolio {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background: #ebedf0;
+
+    h2 {
+        font-family: $font-header;
+        font-weight: bold;
+        font-size: 24px;
+        color: $color-three;
+    }
+
+    .one {
+        font-style: italic;
+        color: $color-two;
+    }
+}
+
+
+.card {
+    height: 100%;
+
+    img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+}
+
+/* Footer */
+
+.page-footer {
+    width: 100%;
+    height: 130px;
+
+    .container {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+        position: relative;
+        display: flex;
+
+        .copyright {
+            position: absolute;
+            top: 30%;
+            left: 12%;
+            font-family: $font-header;
+            color: $color-two;
+        }
+
+        ul {
+            position: absolute;
+            display: block;
+            width: 300px;
+            top: 30%;
+            left: 45%;
+            list-style-type: none;
+            margin: auto;
+            padding: auto;
+
+
+            li {
+                display: inline-block;
+                height: 40px;
+                width: 40px;
+                padding: 5px;
+                border: 1px solid $color-two;
+                background: $color-two;
+                border-radius: 50%;
+                text-align: center;
+                align-items: center;
+                text-align: center;
+                justify-content: center;
+                margin: 3px;
+                line-height: 30px;
+
+                i {
+                    color: $color-one;
+                    font-size: 20px;
+                }
+            }
+        } 
+    }
+}
+
+/* Media */
+
+@media (max-width: 767px) {
+
+    .splash-inner .splash-title {
+        font-size: 40px;
+    }
+
+    .main-navigation {
+        display: flex;
+        left: 60%;
+
+        ul {
+            flex-direction: column;
+            margin: 0;
+            padding: 0;
+            max-width: 120px;
+        }
+    }
+
+    .services {
+        height: auto;
+
+        .container .row {
+            padding: 5px 20px;
+        }
+
+        .col-12 {
+            padding: 20px;
+        }
+
+    }
+
+    .page-footer {
+        height: 150px;
+        width: 100%;
+        
+        .container {
+            height: 100%;
+            width: 100%;
+            position: relative;
+            display: flex;
+            text-align: center;
+
+            .copyright{
+                position: absolute;
+                top: 70%;
+            }
+
+            ul {
+                width: auto;
+                position: absolute;
+                top: 20%;
+                left: 25%;
+                margin: 0;
+                padding: 0;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+}
